<resources>
    <string name="app_name">VisiteVassouras</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Secretaria de Desenvolvimento Econômico e Turismo</string>
    <string name="nav_header_subtitle">SEDET</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configurações</string>

    <string name="menu_home">Home</string>
    <string name="menu_atracoes">Atrativos Turísticos</string>
    <string name="menu_restaurantes">Restaurantes</string>
    <string name="menu_hospedagens">Hospedagens</string>
    <string name="menu_eventos">Eventos</string>
    <string name="menu_sobre">Sobre o App</string>
    <string name="menu_ler_qrcode">Ler QrCode</string>
    <string name="menu_contato">Fale Conosco</string>
    <string name="visite_vassouras">VISITE VASSOURAS</string>
    <string name="comecar">COMEÇAR</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo_prefeitura_de_vassouras">Logo Prefeitura de Vassouras</string>
    <string name="this_is_about_vassouras_fragment">This is about Vassouras fragment</string>
    <string name="conheca_vassouras_btn">CONHEÇA VASSOURAS</string>
    <string name="boas_vindas">Bem-vindo a Vassouras</string>
    <string name="titulo_atracoes_home">Encontre lugares para visitar</string>
    <string name="titulo_eventos_home">Confira a nossa agenda</string>
    <string name="descricao_responsavel">Secretaria de Desenvolvimento Econômico e Turismo</string>
    <string name="endereco">Endereço</string>
    <string name="endereco_sedet">Av. Otávio Gomes, 395, Centro.</string>
    <string name="endereco_cat">Rua Barão de Capivari, 20 - Centro.</string>
    <string name="contato_cat">(24) 2491-9018</string>
    <string name="horario_funcionamento">Horário de funcionamento</string>
    <string name="horario_sedet">Segunda à Sexta das 8h às 17h.</string>
    <string name="horario_cat">Terças, quartas e quintas, das 12h às 17h.
        Sextas, sábados, domingos e feriados, das 09h às 16h.</string>
    <string name="facebook">\@sdetvassouras</string>
    <string name="instagram">\@visitevassouras</string>
    <string name="titulo_scan_qr_code">Scan Qr Code</string>
    <string name="descricao_scan_qr_code">Encontrou um QrCode?! Clique no botão abaixo e descubra
        curiosidades sobre a história dessa atração.</string>
    <string name="ler_qr_code">LER QR CODE</string>
    <string name="aponte_para_o_qrcode">Aponte para o QrCode...</string>
    <string name="sobre">Sobre</string>
    <string name="sobre_o_app">Este aplicativo faz parte do produto desenvolvido durante o Desafio
        das Engenharias, evento promovido pela Universidade de Vassouras para a construção de
        soluções inovadoras.</string>
    <string name="sobre_o_app1">A equipe do projeto é composta por uma desenvolvedora mobile, dois
        desenvolvedores backend e um analista de requisitos, sendo todos discentes do curso de
        Engenharia de Software da Universidade de Vassouras.</string>
    <string name="quero_visitar">QUERO VISITAR</string>
    <string name="saiba_mais">SAIBA MAIS</string>
    <string name="local">Local</string>
    <string name="data">Data(s)</string>
    <string name="horario_evento">Horário</string>
    <string name="ingresso">Ingresso</string>
    <string name="cidade_historica">Cidade Histórica</string>
    <string name="cidade_turistica">Turística</string>
    <string name="sobre_historica">Vassouras, a princesinha do Café, é uma das cidades mais bonitas
        do interior do estado do Rio de Janeiro. No coração do Vale do Café, o município foi  um
        grande centro cultural, político e econômico do Brasil oitocentista e ajudou a sustentar a
        economia do Segundo Reinado. É um dos berços da história e da diversidade cultural brasileira,
        onde você encontra beleza e tranquilidade.</string>
    <string name="sobre_turistica">Detentora de um rico patrimônio cultural material e imaterial
        composto por suntuosas fazendas históricas remanescentes dos tempos áureos do café, por um
        conjunto paisagístico e urbanístico tombado pelo IPHAN formado por um casario de época com
        belíssimas construções, entre casarões, sobrados e palacetes, pelo Jongo, pela Capoeira,
        pela Caninha Verde, pelo Calango e pelas Folias de Reis.</string>
    <string name="cidade_universitaria">Universitária</string>
    <string name="sobre_universitaria">Há mais de 50 anos, a cidade gira em torno da Universidade de
        Vassouras. Isso garante uma série de serviços aos estudantes. A Universidade de Vassouras
        forma e especializa profissionais nas mais diversas áreas do conhecimento, baseada na tríade
        ensino, pesquisa e extensão.</string>
    <string name="dias_funcionamento">Dias de funcionamento</string>
    <string name="hifen_data">-</string>
    <string name="apoio">Apoio</string>
    <string name="realizacao">Realização</string>
    <string name="titulo_cat">Centro de Atendimento ao Turista (CAT)</string>
</resources>